Fix alignment on share page

--- a/src/Components/Budget/Budget.scss
+++ b/src/Components/Budget/Budget.scss
@@ -39,16 +39,24 @@
 .budget-continue-btn {
   cursor: pointer;
   background-color: #68749F;
-  width: 100%;
+  width: 20rem;
   border: none;
   color: white;
   font-size: 1.25rem;
   padding: 5%;
-  margin: 2rem;
+  margin: 2rem 0;
   border-radius: 5px;
 }
 
 .cheeky-msg {
   font-size: 1.5rem;
   color: $font-color;
+}
+
+.budget-proceed-container {
+  display: flex;
+  width: 100%;
+  height: 30vh;
+  flex-direction: column;
+  align-items: center;
 }
